--- a/package.json
+++ b/package.json
@@ -12,21 +12,23 @@
     "dependencies": {
         "axios": "^0.18.0",
         "iview": "^3.1.3",
-        "swiper": "^4.3.5",
+        "swiper": "^4.4.1",
         "url-search-params-polyfill": "^5.0.0",
         "vue": "^2.5.17",
         "vue-quill-editor": "^3.0.6",
-        "vue-router": "^3.0.1"
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1"
     },
     "devDependencies": {
-        "@vue/cli-plugin-babel": "^3.0.1",
-        "@vue/cli-plugin-eslint": "^3.0.1",
-        "@vue/cli-service": "^3.0.1",
-        "@vue/eslint-config-airbnb": "^3.0.1",
+        "@babel/core": "^7.1.2",
+        "@vue/cli-plugin-babel": "^3.0.5",
+        "@vue/cli-plugin-eslint": "^3.0.5",
+        "@vue/cli-service": "^3.0.5",
+        "@vue/eslint-config-airbnb": "^3.0.5",
         "eslint-plugin-vue": "^4.7.1",
         "less": "^2.7.3",
-        "less-loader": "^4.0.6",
-        "node-sass": "^4.9.3",
+        "less-loader": "^4.1.0",
+        "node-sass": "^4.9.4",
         "sass-loader": "^7.1.0",
         "vue-template-compiler": "^2.5.17"
     },
@@ -35,7 +37,9 @@
         "url": ""
     },
     "license": "MIT",
-    "keywords": ["ice-scaffold"],
+    "keywords": [
+        "ice-scaffold"
+    ],
     "publishConfig": {
         "access": "public",
         "registry": "http://registry.npmjs.com"
