--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
-  "name": "pu",
-  "version": "1.0.0",
-  "description": "",
-  "homepage": "http://www.mopui.com",
-  "author": "ice-admin@alibaba-inc.com",
-  "scripts": {
-    "start": "vue-cli-service serve",
-    "build": "vue-cli-service build --modern"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "es6-promise": "^4.2.5",
-    "iview": "^3.1.3",
-    "swiper": "^4.4.1",
-    "url-search-params-polyfill": "^5.0.0",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-eslint": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
-    "@vue/eslint-config-airbnb": "^3.0.5",
-    "eslint-plugin-vue": "^4.7.1",
-    "less": "^2.7.3",
-    "less-loader": "^4.1.0",
-    "node-sass": "^4.9.4",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.17"
-  },
-  "repository": {
-    "type": "",
-    "url": ""
-  },
-  "license": "MIT",
-  "keywords": [
-    "ice-scaffold"
-  ],
-  "publishConfig": {
-    "access": "public",
-    "registry": "http://registry.npmjs.com"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
-  "scaffoldConfig": {
-    "name": "",
-    "title": "",
-    "screenshot": ""
-  },
-  "title": "炎黄"
+    "name": "pu",
+    "version": "1.0.0",
+    "description": "",
+    "homepage": "http://www.mopui.com",
+    "author": "yhtpw",
+    "scripts": {
+        "start": "vue-cli-service serve",
+        "build": "vue-cli-service build --modern"
+    },
+    "dependencies": {
+        "axios": "^0.18.0",
+        "es6-promise": "^4.2.5",
+        "iview": "^3.1.3",
+        "swiper": "^4.4.1",
+        "url-search-params-polyfill": "^5.0.0",
+        "vue": "^2.5.17",
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.1.2",
+        "@vue/cli-plugin-babel": "^3.0.5",
+        "@vue/cli-plugin-eslint": "^3.0.5",
+        "@vue/cli-service": "^3.0.5",
+        "@vue/eslint-config-airbnb": "^3.0.5",
+        "eslint-plugin-vue": "^4.7.1",
+        "less": "^2.7.3",
+        "less-loader": "^4.1.0",
+        "node-sass": "^4.9.4",
+        "sass-loader": "^7.1.0",
+        "vue-template-compiler": "^2.5.17"
+    },
+    "repository": {
+        "type": "",
+        "url": ""
+    },
+    "license": "MIT",
+    "keywords": [
+        "ice-scaffold"
+    ],
+    "publishConfig": {
+        "access": "public",
+        "registry": "http://registry.npmjs.com"
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not ie <= 8"
+    ],
+    "scaffoldConfig": {
+        "name": "",
+        "title": "",
+        "screenshot": ""
+    },
+    "title": "炎黄"
 }
