--- a/package.json
+++ b/package.json
@@ -14,25 +14,16 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
-        "es6-promise": "^4.2.5",
         "iview": "^3.1.4",
         "swiper": "^4.4.2",
-        "url-search-params-polyfill": "^5.0.0",
         "vue": "^2.5.17",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1",
         "clipboard": "^2.0.1",
         "codemirror": "^5.41.0",
-        "cropperjs": "^1.4.3",
-        "dayjs": "^1.7.7",
         "echarts": "^4.2.0-rc.2",
-        "html2canvas": "^1.0.0-alpha.12",
-        "iview-area": "^1.6.0",
         "js-cookie": "^2.2.0",
-        "simplemde": "^1.11.2",
-        "sortablejs": "^1.7.0",
-        "wangeditor": "^3.1.1",
-        "xlsx": "^0.14.0"
+        "wangeditor": "^3.1.1"
     },
     "devDependencies": {
         "@babel/core": "^7.1.2",
@@ -42,16 +33,13 @@
         "@vue/cli-service": "^3.1.2",
         "@vue/eslint-config-airbnb": "^4.0.0",
         "@vue/eslint-config-standard": "^4.0.0",
-        "@vue/test-utils": "^1.0.0-beta.25",
+        "vue-template-compiler": "^2.5.17",
         "eslint-plugin-cypress": "^2.1.1",
         "eslint-plugin-vue": "^4.7.1",
         "less": "^2.7.3",
         "less-loader": "^4.1.0",
-        "lint-staged": "^8.0.4",
-        "mockjs": "^1.0.1-beta3",
         "node-sass": "^4.10.0",
-        "sass-loader": "^7.1.0",
-        "vue-template-compiler": "^2.5.17"
+        "sass-loader": "^7.1.0"
     },
     "repository": {
         "type": "",
