--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.7.7",
     "echarts": "^4.2.0-rc.2",
     "iview": "^3.1.4",
+    "iview-area": "^1.6.0",
     "js-cookie": "^2.2.0",
     "swiper": "^4.4.2",
     "vue": "^2.5.17",
