--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "build": "vue-cli-service build"
     },
     "dependencies": {
+        "area-data": "^5.0.6",
         "axios": "^0.18.0",
         "clipboard": "^2.0.1",
         "codemirror": "^5.41.0",
